--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 			<h3>InkBox OS is an open-source, fully-functionnal standalone OS for Rakuten Kobo's eReaders.</b></h3>
 			<img src="assets/screenshots/library.png" width=600 height=800 alt="InkBox OS">
 			<p>Here are some of InkBox OS' features:
-				<ul>
-					<li>Full integrated KoBox X11 subsystem
-					<li>ePUB, PDF, pictures and plain text display support</li>
-					<li>Versatile configuration options for reading</li>
-					<li>muPDF rendering engine for ePUB (and soon PDFs)</li>
-					<li>Wi-Fi support and web browser</li>
-					<li>Encrypted storage with EncFS</li>
-					<li>Fast dictionary & local storage search</li>
-					<li>Dark mode</li>
-					<li>Full factory reset option if needed</li>
-					<li>Seamless update process</li>
-					<li>VNC viewer app</li>
-					<li>Search function</li>
-					<li>9 built-in fonts</li>
-					<li>Auto-suspend</li>
-					<li>Lock screen/passcode</li>
-					<li>User-friendly experience</li>
-				</ul>
+				<p>
+					Full integrated KoBox X11 subsystem
+					<br>ePUB, PDF, pictures and plain text display support
+					<br>Versatile configuration options for reading
+					<br>muPDF rendering engine for ePUB PDFs
+					<br>Wi-Fi support and web browser
+					<br>Encrypted storage with EncFS
+					<br>Fast dictionary & local storage search
+					<br>Dark mode
+					<br>Full factory reset option if needed
+					<br>Seamless update process
+					<br>VNC viewer app
+					<br>Search function
+					<br>9 built-in fonts
+					<br>Auto-suspend
+					<br>Lock screen/passcode
+					<br>User-friendly experience
+				</p>
 		</center>
 	</body>
 </html>
