--- a/screenshots.html
+++ b/screenshots.html
@@ -7,6 +7,10 @@
 		<script id="navbar" src="navbar.js"></script>
 		<center>
 			<h3>InkBox OS screenshots</h3>
+			<img src="assets/screenshots/reader-1.png" alt="Reader framework">
+			<img src="assets/screenshots/reader-2.png" alt="Reader framework: 'Go to page' function">
+			<img src="assets/screenshots/reader-3.png" alt="Reader framework: font chooser">
+			<img src="assets/screenshots/reader-4.png" alt="Reader framework: dictionnary search">
 		</center>
 	</body>
 </html>
