--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Bitter:wght@500&family=Roboto+Mono:wght@400;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,500;0,700;1,500;1,700&family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<style>
 			body {
 				background-color: #ebebeb
@@ -20,6 +20,7 @@
 			p {
 				font-family: "Bitter", sans-serif;
 				max-width: 650px;
+				line-height: 1.6;
 			}
 			li {
 				font-family: "Bitter", sans-serif;
@@ -35,7 +36,7 @@
 	</head>
 	<body>
 		<center>
-			<img src="assets/inkbox-web.png" alt="InkBox Project logo">
+			<img src="assets/inkbox-web.png" alt="InkBox Project logo" width=399 height=123>
 			<p><a href="/">Home</a><a href="/git">GitLab</a><a href="/wiki">Wiki</a><a href="/screenshots.html">Screenshots</a></p>
 		</center>
 	</body>
