--- a/screenshots.html
+++ b/screenshots.html
@@ -7,10 +7,15 @@
 		<script id="navbar" src="navbar.js"></script>
 		<center>
 			<h3>InkBox OS screenshots</h3>
-			<img src="assets/screenshots/reader-1.png" alt="Reader framework">
-			<img src="assets/screenshots/reader-2.png" alt="Reader framework: 'Go to page' function">
-			<img src="assets/screenshots/reader-3.png" alt="Reader framework: font chooser">
-			<img src="assets/screenshots/reader-4.png" alt="Reader framework: dictionnary search">
+			<img src="assets/screenshots/reader-1.png" alt="Reader framework" width=600 height=800>
+			<p><b><i>Reader framework</i></b></p>
+			<img src="assets/screenshots/reader-2.png" alt="Reader framework: 'Go to page' function" width=600 height=800>
+			<p><b><i>Reader framework: 'Go to page' function</i></b></p>
+			<img src="assets/screenshots/reader-3.png" alt="Reader framework: font chooser" width=600 height=800>
+			<p><b><i>Reader framework: font chooser</i></b></p>
+			<img src="assets/screenshots/reader-4.png" alt="Reader framework: dictionnary search"width=600 height=800>
+			<p><b><i>Reader framework: dictionnary search</i></b></p>
 		</center>
+		<script id="bottompage" src="bottompage.js"></script>
 	</body>
 </html>
