--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<center>
 			<h3>InkBox OS is an open-source, fully-functionnal standalone OS for Rakuten Kobo's eReaders.</b></h3>
 			<img src="assets/screenshots/library.png" width=600 height=800 alt="InkBox OS">
-			<p>Here are some of InkBox OS' features:
+			<p><b>Here are some of InkBox OS' features:</b>
 				<p>
 					Full integrated KoBox X11 subsystem
 					<br>ePUB, PDF, pictures and plain text display support
@@ -27,6 +27,7 @@
 					<br>Lock screen/passcode
 					<br>User-friendly experience
 				</p>
+			</p>
 		</center>
 	</body>
 </html>
