Add installation.html and improve design

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<h3>InkBox OS is an open-source, fully-functionnal standalone OS for Rakuten Kobo's eReaders.</b></h3>
-			<img src="assets/screenshots/library.png" width=600 height=800 alt="InkBox OS">
+			<h2>InkBox OS is an open-source, fully-functionnal standalone OS for Rakuten Kobo's eReaders.</b></h2>
+			<img src="assets/screenshots/library-1.png" width=600 height=800 alt="InkBox OS">
 			<p><b>Here are some of InkBox OS' features:</b>
 				<p>
 					Full integrated KoBox X11 subsystem
@@ -29,5 +29,6 @@
 				</p>
 			</p>
 		</center>
+		<script id="bottompage" src="bottompage.js"></script>
 	</body>
 </html>
