--- a/navigation.html
+++ b/navigation.html
@@ -14,30 +14,50 @@
 				font-size: 60px;
 				font-family: "Roboto Mono", monospace;
 			}
-			h3 {
-				font-family: "Roboto", sans-serif;
+			h2 {
+				font-family: "Bitter", sans-serif;
+				font-size: 18pt;
+				line-height: 1.35;
+				max-width: 650px;
 			}
 			p {
 				font-family: "Bitter", sans-serif;
-				max-width: 650px;
+				font-size: 12.5pt;
+				max-width: 700px;
 				line-height: 1.6;
 			}
 			li {
 				font-family: "Bitter", sans-serif;
-				max-width: 650px;
+				max-width: 700px;
 				line-height: 1.6;
 			}
 			a {
+				font-family: "Bitter", monospace;
+				font-weight: bold;
+			}
+			pre {
+				font-size: 12.5pt;
+			}
+			.wide {
 				font-family: "Roboto Mono", monospace;
 				font-weight: bold;
+				font-size: 14pt;
 				padding: 0px 15px
 			}
 		</style>
 	</head>
 	<body>
 		<center>
-			<img src="assets/inkbox-web.png" alt="InkBox Project logo" width=399 height=123>
-			<p><a href="/">Home</a><a href="/git">GitLab</a><a href="/wiki">Wiki</a><a href="/screenshots.html">Screenshots</a></p>
+			<img src="assets/inkbox-web.png" alt="InkBox Project logo" width=400 height=125>
+			<hr>
+			<p>
+				<a class="wide" href="/">Home</a>
+				<a class="wide" href="/installation.html">Installation</a>
+				<a class="wide" href="/git">GitLab</a>
+				<a class="wide" href="/wiki">Wiki</a>
+				<a class="wide" href="/screenshots.html">Screenshots</a>
+			</p>
+			<hr>
 		</center>
 	</body>
 </html>
