Clean up navigation.html
Added stylesheet, linked to it and made InkBox logo redirect to main page.

--- a/navigation.html
+++ b/navigation.html
@@ -5,50 +5,11 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,500;0,700;1,500;1,700&family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-	<style>
-			body {
-				background-color: #ebebeb
-			}
-			h1 {
-				line-height: 0px;
-				font-size: 60px;
-				font-family: "Roboto Mono", monospace;
-			}
-			h2 {
-				font-family: "Bitter", sans-serif;
-				font-size: 18pt;
-				line-height: 1.35;
-				max-width: 650px;
-			}
-			p {
-				font-family: "Bitter", sans-serif;
-				font-size: 12.5pt;
-				max-width: 700px;
-				line-height: 1.6;
-			}
-			li {
-				font-family: "Bitter", sans-serif;
-				max-width: 700px;
-				line-height: 1.6;
-			}
-			a {
-				font-family: "Bitter", monospace;
-				font-weight: bold;
-			}
-			pre {
-				font-size: 12.5pt;
-			}
-			.wide {
-				font-family: "Roboto Mono", monospace;
-				font-weight: bold;
-				font-size: 14pt;
-				padding: 0px 15px
-			}
-		</style>
+		<link rel="stylesheet" href="/navigation.css">
 	</head>
 	<body>
 		<center>
-			<img src="assets/inkbox-web.png" alt="InkBox Project logo" width=400 height=125>
+			<a class="wide" href="/"> <img src="assets/inkbox-web.png" alt="InkBox Project logo" width=400 height=125> </a>
 			<hr>
 			<p>
 				<a class="wide" href="/">Home</a>
