--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<h2>InkBox OS is an open-source, fully-functionnal standalone OS for Rakuten Kobo's eReaders.</b></h2>
+			<h2>InkBox OS is an open-source, fully-functional standalone OS for Rakuten Kobo's eReaders.</b></h2>
 			<img src="assets/screenshots/library-1.png" width=600 height=800 alt="InkBox OS">
-			<p><b>Here are some of InkBox OS' features:</b>
+			<p><b>Here are some of InkBox's features:</b>
 				<p>
 					Full integrated KoBox X11 subsystem
 					<br>ePUB, PDF, pictures and plain text display support
