Fix some things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<center>
 			<h2>InkBox OS is an open-source, fully-functional standalone OS for Rakuten Kobo's eReaders.</b></h2>
 			<img src="assets/screenshots/library-1.png" width=600 height=800 alt="InkBox OS">
-			<p><b>Here are some of InkBox's features:</b>
+			<p><b>Here are some of InkBox OS' features:</b>
 				<p>
 					Full integrated KoBox X11 subsystem
 					<br>ePUB, PDF, pictures and plain text display support
