Add direct OS download links

--- a/downloads.html
+++ b/downloads.html
@@ -7,8 +7,15 @@
 		<script id="navbar" src="navbar.js"></script>
 		<center>
 			<h2>Download InkBox OS</h2>
-			<p>This page will contain direct download links for InkBox on the website.<br>
-                WIP page by themightydill, working on it, don't merge yet.</p>
+			<p>This page contains direct download links for InkBox OS. <br>
+			To check the model number, look at the bottom or back of your eReader.<strong>If your model number is not on this page, unfortunately your eReader is not supported by InkBox at this time.</strong><br>
+			To see if InkBox can be ported to your eReader model, visit the <a href="https://discord.gg/xWUVRgMdsv">Discord server</a> or the <a href="https://github.com/Kobo-InkBox/inkbox">GitHub repository</a>.</p>
+			<ul>
+				<li>Kobo Glo (N613): <a href="http://23.163.0.39/bundles/inkbox/native/n613/inkbox-1.5-n613.xz">Download InkBox <strong>1.5</strong> (inkbox-1.5-n613.xz)</a></li>
+				<li>Kobo Mini (N705): <a href="http://23.163.0.39/bundles/inkbox/native/n705/inkbox-1.5-n705.xz">Download InkBox <strong>1.5</strong> (inkbox-1.5-n613.xz)</a></li>
+				<li>Kobo Touch (N905B): <a href="http://23.163.0.39/bundles/inkbox/native/n905b/inkbox-1.7-n905b.xz">Download InkBox <strong>1.7</strong> (inkbox-1.-n905b.xz)</a></li>
+				<li>Kobo Touch (N905C): <a href="http://23.163.0.39/bundles/inkbox/native/n905c/inkbox-1.5-n905c.xz">Download InkBox <strong>1.5</strong> (inkbox-1.5-905c.xz)</a></li>
+			</ul>
 		</center>
 		<script id="bottompage" src="bottompage.js"></script>
 	</body>
