--- a/installation.html
+++ b/installation.html
@@ -7,7 +7,13 @@
 		<script id="navbar" src="navbar.js"></script>
 		<center>
 			<h2>InkBox OS installation</h2>
-			<p>You can download precompiled OS/binaries <a href="http://23.163.0.39/bundles/inkbox/native">here</a>. Huge thanks to <a href="https://github.com/fermino">@fermino</a> for providing free hosting.<br>On Windows, use <a href="https://balena.io/etcher">balenaEtcher</a> to flash the InkBox image file to the Kobo's SD card.<br>On Linux and MacOS, balenaEtcher is the easiest option for command-line-reluctant users. Alternatively, you can also open a terminal and check the device node of the Kobo's SD card with <code>fdisk -l</code>. Then, write the image to the SD card, like this: <pre>xzcat inkbox.xz | dd of=/dev/mmcblk0</pre></p>
+			<p> There are 3 steps to install InkBox OS on your Kobo eReader: download, flash and setup. To download InkBox, visit the <a href="/downloads.html">Downloads</a> page.
+				<br>To flash InkBox to your eReader, take out the <strong>internal</strong> MicroSD card by taking off the back cover (be careful!). It <strong>must</strong> have at least 4 gigabytes of storage. If there is less, a new MicroSD card will need to be acquired. Insert the card into your computer.<br>
+				On Windows, use <a href="https://balena.io/etcher">balenaEtcher</a> to flash the InkBox image file to the MicroSD card.<br>
+				On Linux and MacOS, balenaEtcher is the easiest option for command-line-reluctant users. Alternatively, you can also open a terminal and check the device node of the eReader's MicroSD card with <code>fdisk -l</code>. Then, write the image to the SD card, like this: <pre>xzcat inkbox.xz | dd of=/dev/mmcblk0</pre>
+				<br>To setup InkBox, eject the MicroSD card from your computer and insert it in the Kobo's slot. Put the back cover on and power it on. It might take a while to boot, so be patient. Setting up InkBox is easy; just follow the instructions on the screen.<br>
+				InkBox has been installed! Now you can <a href="http://23.163.0.39/bundles/inkbox/native/update/">update</a> InkBox to the latest version.
+			</p>
 		</center>
 		<script id="bottompage" src="bottompage.js"></script>
 	</body>
