--- a/downloads.html
+++ b/downloads.html
@@ -7,7 +7,7 @@
 		<script id="navbar" src="navbar.js"></script>
 		<center>
 			<h2>Download InkBox OS</h2>
-			<p>This page contains direct download links for InkBox OS. <br>
+			<p>This page contains direct download links for InkBox OS. Huge thanks to <a href="https://github.com/fermino/">@fermino</a><br>
 			To check the model number, look at the bottom or back of your eReader.<strong>If your model number is not on this page, unfortunately your eReader is not supported by InkBox at this time.</strong><br>
 			To see if InkBox can be ported to your eReader model, visit the <a href="https://discord.gg/xWUVRgMdsv">Discord server</a> or the <a href="https://github.com/Kobo-InkBox/inkbox">GitHub repository</a>.</p>
 			<ul>
