--- a/navigation.html
+++ b/navigation.html
@@ -14,6 +14,7 @@
 			<p>
 				<a class="wide" href="/">Home</a>
 				<a class="wide" href="/installation.html">Installation</a>
+				<a class="wide" href="/downloads.html">Download</a>
 				<a class="wide" href="/git">GitLab</a>
 				<a class="wide" href="/wiki">Wiki</a>
 				<a class="wide" href="/screenshots.html">Screenshots</a>
