--- a/downloads.html
+++ b/downloads.html
@@ -12,7 +12,7 @@
 			<p><i>Currently available images</i></p>
 			<p>Kobo Mini (N705): <a href="http://23.163.0.39/bundles/inkbox/native/n705/inkbox-1.5-n705.xz">Download InkBox OS <strong>1.5</strong> (inkbox-1.5-n613.xz)</a></p>
 			<p>Kobo Touch (N905B): <a href="http://23.163.0.39/bundles/inkbox/native/n905b/inkbox-1.7-n905b.xz">Download InkBox OS <strong>1.7</strong> (inkbox-1.7-n905b.xz)</a></p>
-			<p>Kobo Touch (N905C): <a href="http://23.163.0.39/bundles/inkbox/native/n905c/inkbox-1.5-n905c.xz">Download InkBox OS <strong>1.5</strong> (inkbox-1.5-905c.xz)</a></p>
+			<p>Kobo Touch (N905C): <a href="http://23.163.0.39/bundles/inkbox/native/n905c/inkbox-1.5-n905c.xz">Download InkBox OS <strong>1.5</strong> (inkbox-1.5-n905c.xz)</a></p>
 			<p>Kobo Glo (N613): <a href="http://23.163.0.39/bundles/inkbox/native/n613/inkbox-1.5-n613.xz">Download InkBox OS <strong>1.5</strong> (inkbox-1.5-n613.xz)</a></p>
 			<p class="small"><i>Huge thanks to <a href="https://github.com/fermino/">@fermino</a> for hosting.</i></p>
 		</center>
