Update features list

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			<img src="assets/screenshots/library-1.png" width=600 height=800 alt="InkBox OS">
 			<p><b>Here are some of InkBox OS' features:</b>
 				<p>
-					Full integrated KoBox X11 subsystem
-					<br>ePUB, PDF, pictures and plain text display support
+					Fully integrated KoBox X11 subsystem
+					<br>ePUB, PDF, picture and plain text display support
 					<br>Versatile configuration options for reading
-					<br>muPDF rendering engine for ePUB PDFs
+					<br>muPDF rendering engine for ePUBs and PDFs
 					<br>Wi-Fi support and web browser
 					<br>Encrypted storage with EncFS
 					<br>Fast dictionary & local storage search
@@ -22,7 +22,7 @@
 					<br>Seamless update process
 					<br>VNC viewer app
 					<br>Search function
-					<br>9 built-in fonts
+					<br>10 built-in fonts
 					<br>Auto-suspend
 					<br>Lock screen/passcode
 					<br>User-friendly experience
