Add download links to newly supported devices' images

--- a/downloads.html
+++ b/downloads.html
@@ -14,6 +14,9 @@
 			<p>Kobo Touch (N905B): <a href="http://23.163.0.39/bundles/inkbox/native/n905b/inkbox-1.7-n905b.xz">Download InkBox OS <strong>1.7</strong> (inkbox-1.7-n905b.xz)</a></p>
 			<p>Kobo Touch (N905C): <a href="http://23.163.0.39/bundles/inkbox/native/n905c/inkbox-1.5-n905c.xz">Download InkBox OS <strong>1.5</strong> (inkbox-1.5-n905c.xz)</a></p>
 			<p>Kobo Glo (N613): <a href="http://23.163.0.39/bundles/inkbox/native/n613/inkbox-1.5-n613.xz">Download InkBox OS <strong>1.5</strong> (inkbox-1.5-n613.xz)</a></p>
+			<p>Kobo Aura SE (N236): <a href="http://23.163.0.39/bundles/inkbox/native/n236/inkbox-1.9-n236.xz">Download InkBox OS <strong>1.9</strong> (inkbox-1.9-n236.xz)</a></p>
+			<p>Kobo Glo HD (N437): <a href="http://23.163.0.39/bundles/inkbox/native/n437/inkbox-1.9-n437.xz">Download InkBox OS <strong>1.9</strong> (inkbox-1.9-n437.xz)</a></p>
+			<p>Kobo Nia (N306): <a href="http://23.163.0.39/bundles/inkbox/native/n306/inkbox-1.9-n306.xz">Download InkBox OS <strong>1.9</strong> (inkbox-1.9-n306.xz)</a></p>
 			<p class="small"><i>Huge thanks to <a href="https://github.com/fermino/">@fermino</a> for hosting.</i></p>
 		</center>
 		<script id="bottompage" src="bottompage.js"></script>
