Add some screenshots

--- a/screenshots.html
+++ b/screenshots.html
@@ -15,6 +15,10 @@
 			<p><b><i>Reader framework: font chooser</i></b></p>
 			<img src="assets/screenshots/reader-4.png" alt="Reader framework: dictionnary search" width=600 height=800>
 			<p><b><i>Reader framework: dictionnary search</i></b></p>
+			<img src="assets/screenshots/home-1.png" alt="Home screen" width=600 height=800>
+			<p><b><i>Home screen</i></b></p>
+			<img src="assets/screenshots/local_library-1.png" alt="Local library: Main view" width=600 height=800>
+			<p><b><i>Local library: Main view</i></b></p>
 			<img src="assets/screenshots/library-1.png" alt="Online library: Main view" width=600 height=800>
 			<p><b><i>Online library: Main view</i></b></p>
 			<img src="assets/screenshots/library-2.png" alt="Online library: Book info dialog" width=600 height=800>
