--- a/downloads.html
+++ b/downloads.html
@@ -17,6 +17,10 @@
 			<p>Kobo Aura SE (N236): <a href="http://23.163.0.39/bundles/inkbox/native/n236/inkbox-2.0-n236.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n236.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n236/inkbox-2.0-n236.xz">Mirror</a></p>
 			<p>Kobo Glo HD (N437): <a href="http://23.163.0.39/bundles/inkbox/native/n437/inkbox-2.0-n437.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n437.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n705/inkbox-2.0-n437.xz">Mirror</a></p>
 			<p>Kobo Nia model A (N306): <a href="http://23.163.0.39/bundles/inkbox/native/n306/inkbox-2.0-n306_a.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n306_a.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n306/inkbox-2.0-n306_a.xz">Mirror</a></p>
+			<p>Kobo Libra (N873): Image available on <a href="https://discord.gg/xWUVRgMdsv">request</a> only with guidance.</p>
+			<p>Kindle Touch original (KT): Image available on <a href="https://discord.gg/xWUVRgMdsv">request</a> only with guidance.</p>
+			<p><i>sha256 checksums</i></p>
+			<a href="http://23.163.0.39/bundles/inkbox/native/2.0-checksums.txt">2.0 release</a>
 			<p class="small"><i>Huge thanks to <a href="https://github.com/fermino/">@fermino</a> for hosting.</i></p>
 		</center>
 		<script id="bottompage" src="bottompage.js"></script>
