--- a/navigation.html
+++ b/navigation.html
@@ -19,6 +19,7 @@
 				<a class="wide" href="/git">GitLab</a>
 				<a class="wide" href="/wiki">Wiki</a>
 				<a class="wide" href="/screenshots.html">Screenshots</a>
+				<a class="wide" href="/donate.html">Donate</a>
 			</p>
 			<hr>
 		</center>
