More screenshot updates

--- a/screenshots.html
+++ b/screenshots.html
@@ -9,11 +9,11 @@
 			<h2>InkBox OS screenshots</h2>
 			<img src="assets/screenshots/reader-5.png" alt="Reader framework" width=600 height=800>
 			<p><b><i>Reader framework</i></b></p>
-			<img src="assets/screenshots/reader-2.png" alt="Reader framework: 'Go to page' function" width=600 height=800>
-			<p><b><i>Reader framework: 'Go to page' function</i></b></p>
-			<img src="assets/screenshots/reader-3.png" alt="Reader framework: font chooser" width=600 height=800>
+			<img src="assets/screenshots/reader-8.png" alt="Reader framework: 'Go to page' function" width=600 height=800>
+			<p><b><i>Reader framework: Highlights list dialog</i></b></p>
+			<img src="assets/screenshots/reader-7.png" alt="Reader framework: font chooser" width=600 height=800>
 			<p><b><i>Reader framework: font chooser</i></b></p>
-			<img src="assets/screenshots/reader-4.png" alt="Reader framework: dictionnary search" width=600 height=800>
+			<img src="assets/screenshots/reader-6.png" alt="Reader framework: dictionnary search" width=600 height=800>
 			<p><b><i>Reader framework: dictionnary search</i></b></p>
 			<img src="assets/screenshots/home-2.png" alt="Home screen" width=600 height=800>
 			<p><b><i>Home screen</i></b></p>
