--- a/navigation.html
+++ b/navigation.html
@@ -16,7 +16,7 @@
 				<a class="wide" href="/">Home</a>
 				<a class="wide" href="/downloads.html">Download</a>
 				<a class="wide" href="/installation.html">Installation</a>
-				<a class="wide" href="/git">GitLab</a>
+				<a class="wide" href="https://github.com/Quill-OS">GitHub</a>
 				<a class="wide" href="/wiki">Wiki</a>
 				<a class="wide" href="/screenshots.html">Screenshots</a>
 				<a class="wide" href="/donate.html">Donate</a>
