--- a/downloads.html
+++ b/downloads.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>InkBox Project - Downloads</title>
+		<title>Quill OS - Downloads</title>
 	</head>
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<h2>Download InkBox OS</h2>
-			<p>This page contains direct download links for InkBox OS. Once you have downloaded the file you need (see below), please follow the <a href="/installation.html">installation steps</a>.<br>To check the model number, look at the bottom or back of your eReader.<br>If your model number is not on this page, unfortunately your eReader is not supported by InkBox at this time.<br><strong>IMPORTANT: InkBox OS does NOT provide ANY WARRANTY at all and we are not responsible if you brick your device with one of the images below. <a href="https://github.com/Kobo-InkBox/inkbox/blob/master/LEGAL.md">Details here.</a></strong><br>To see whether InkBox can be ported or not to your eReader, visit the <a href="https://discord.gg/xWUVRgMdsv">Discord server</a> or the <a href="https://github.com/Kobo-InkBox/inkbox">GitHub repository</a>.</p>
+			<h2>Download Quill OS</h2>
+			<p>This page contains direct download links for Quill OS. Once you have downloaded the file you need (see below), please follow the <a href="/installation.html">installation steps</a>.<br>To check the model number, look at the bottom or back of your eReader.<br>If your model number is not on this page, unfortunately your eReader is not supported by Quill OS at this time.<br><strong>IMPORTANT: Quill OS does NOT provide ANY WARRANTY at all and we are not responsible if you brick your device with one of the images below. <a href="https://github.com/Kobo-InkBox/inkbox/blob/master/LEGAL.md">Details here.</a></strong><br>To see whether Quill OS can be ported or not to your eReader, visit the <a href="https://discord.gg/xWUVRgMdsv">Discord server</a> or the <a href="https://github.com/Kobo-InkBox/inkbox">GitHub repository</a>.</p>
 			<hr>
 			<p><i>Currently available images</i></p>
-			<p>Kobo Mini (N705): <a href="http://23.163.0.39/bundles/inkbox/native/n705/inkbox-2.0-n705.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n705.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n705/inkbox-2.0-n705.xz">Mirror</a></p>
-			<p>Kobo Touch (N905B): <a href="http://23.163.0.39/bundles/inkbox/native/n905b/inkbox-2.0-n905b.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n905b.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n905b/inkbox-2.0-n905b.xz">Mirror</a></p>
-			<p>Kobo Touch (N905C): <a href="http://23.163.0.39/bundles/inkbox/native/n905c/inkbox-2.0-n905c.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n905c.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n905c/inkbox-2.0-n905c.xz">Mirror</a></p>
-			<p>Kobo Glo (N613): <a href="http://23.163.0.39/bundles/inkbox/native/n613/inkbox-2.0-n613.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n613.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n613/inkbox-2.0-n613.xz">Mirror</a></p>
-			<p>Kobo Aura SE (N236): <a href="http://23.163.0.39/bundles/inkbox/native/n236/inkbox-2.0-n236.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n236.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n236/inkbox-2.0-n236.xz">Mirror</a></p>
-			<p>Kobo Glo HD (N437): <a href="http://23.163.0.39/bundles/inkbox/native/n437/inkbox-2.0-n437.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n437.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n705/inkbox-2.0-n437.xz">Mirror</a></p>
-			<p>Kobo Nia model A (N306): <a href="http://23.163.0.39/bundles/inkbox/native/n306/inkbox-2.0-n306_a.xz">Download InkBox OS <strong>2.0</strong> (inkbox-2.0-n306_a.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n306/inkbox-2.0-n306_a.xz">Mirror</a></p>
+			<p>Kobo Mini (N705): <a href="http://23.163.0.39/bundles/inkbox/native/n705/inkbox-2.0-n705.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n705.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n705/inkbox-2.0-n705.xz">Mirror</a></p>
+			<p>Kobo Touch (N905B): <a href="http://23.163.0.39/bundles/inkbox/native/n905b/inkbox-2.0-n905b.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n905b.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n905b/inkbox-2.0-n905b.xz">Mirror</a></p>
+			<p>Kobo Touch (N905C): <a href="http://23.163.0.39/bundles/inkbox/native/n905c/inkbox-2.0-n905c.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n905c.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n905c/inkbox-2.0-n905c.xz">Mirror</a></p>
+			<p>Kobo Glo (N613): <a href="http://23.163.0.39/bundles/inkbox/native/n613/inkbox-2.0-n613.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n613.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n613/inkbox-2.0-n613.xz">Mirror</a></p>
+			<p>Kobo Aura SE (N236): <a href="http://23.163.0.39/bundles/inkbox/native/n236/inkbox-2.0-n236.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n236.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n236/inkbox-2.0-n236.xz">Mirror</a></p>
+			<p>Kobo Glo HD (N437): <a href="http://23.163.0.39/bundles/inkbox/native/n437/inkbox-2.0-n437.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n437.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n705/inkbox-2.0-n437.xz">Mirror</a></p>
+			<p>Kobo Nia model A (N306): <a href="http://23.163.0.39/bundles/inkbox/native/n306/inkbox-2.0-n306_a.xz">Download Quill OS <strong>2.0</strong> (inkbox-2.0-n306_a.xz)</a> | <a href="http://pkgs-inkbox.duckdns.org:25560/bundles/inkbox/native/n306/inkbox-2.0-n306_a.xz">Mirror</a></p>
 			<!-- <p>Kobo Libra (N873): Image available on <a href="https://discord.gg/xWUVRgMdsv">request</a> only with guidance.</p>
 			<p>Kindle Touch original (KT): Image available on <a href="https://discord.gg/xWUVRgMdsv">request</a> only with guidance.</p> -->
 			<p><i>sha256 checksums</i></p>
