--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>InkBox Project - Homepage</title>
+		<title>Quill OS - Homepage</title>
 	</head>
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<h2>InkBox OS is an open-source, fully-functional standalone OS for Rakuten Kobo's eReaders.</b></h2>
-			<img src="assets/screenshots/home-2.png" width=600 height=800 alt="InkBox OS">
-			<p><b>Here are some of InkBox OS' features:</b>
+			<h2>Quill OS is an open-source, fully-functional standalone OS for Rakuten Kobo's eReaders.</b></h2>
+			<img src="assets/screenshots/home-2.png" width=600 height=800 alt="Quill OS">
+			<p><b>Here are some of Quill OS' features:</b>
 				<p>
 					Fully integrated KoBox X11 subsystem
 					<br>ePUB, PDF, picture and plain text display support
