--- a/installation.html
+++ b/installation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>InkBox Project - Installation</title>
+		<title>Quill OS - Installation</title>
 	</head>
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<h2>InkBox OS installation</h2>
-			<p> There are 3 steps to install InkBox OS on your eReader: <b>download</b>, <b>flash</b> and <b>setup</b>. To download InkBox, visit the <a href="/downloads.html">Downloads</a> page.<br>To flash InkBox to your eReader, take out the <strong>internal</strong> MicroSD card by taking off the back cover (be careful!). It <strong>must</strong> have at least 4 gigabytes of capacity. Insert the card into your computer.<br>On Windows, use <a href="https://balena.io/etcher">balenaEtcher</a> to flash the InkBox image file to the MicroSD card.<br>On Linux and MacOS, balenaEtcher is the easiest option for command-line-reluctant users. Alternatively, you can also open a terminal and check the device node of the eReader's MicroSD card with <code>fdisk -l</code>. Then, write the image to the SD card, like this: <pre>xzcat inkbox.xz | dd of=/dev/mmcblk0</pre></p><p>To setup InkBox, eject the MicroSD card from your computer and insert it in the Kobo's slot. Put the back cover on and power it on. It might take a while to boot, so be patient. Setting InkBox OS up is easy; just follow the instructions on the screen.<br>Once that is done, it is <strong>strongly recommended</strong> to <a href="http://23.163.0.39/bundles/inkbox/native/update/">update</a> to the latest version.</p>
+			<h2>Quill OS installation</h2>
+			<p> There are 3 steps to install Quill OS on your eReader: <b>download</b>, <b>flash</b> and <b>setup</b>. To download Quill OS, visit the <a href="/downloads.html">Downloads</a> page.<br>To flash Quill OS to your eReader, take out the <strong>internal</strong> MicroSD card by taking off the back cover (be careful!). It <strong>must</strong> have at least 4 gigabytes of capacity. Insert the card into your computer.<br>On Windows, use <a href="https://balena.io/etcher">balenaEtcher</a> to flash the Quill OS image file to the MicroSD card.<br>On Linux and MacOS, balenaEtcher is the easiest option for command-line-reluctant users. Alternatively, you can also open a terminal and check the device node of the eReader's MicroSD card with <code>fdisk -l</code>. Then, write the image to the SD card, like this: <pre>xzcat inkbox.xz | dd of=/dev/mmcblk0</pre></p><p>To boot Quill OS, eject the MicroSD card from your computer and insert it in the Kobo's slot. Put the back cover on and power it on. It might take a while to boot, so be patient. Setting Quill OS up is easy; just follow the instructions on the screen.<br>Once that is done, it is <strong>strongly recommended</strong> to <a href="http://23.163.0.39/bundles/inkbox/native/update/">update</a> to the latest version.</p>
 		</center>
 		<script id="bottompage" src="bottompage.js"></script>
 	</body>
