--- a/navigation.html
+++ b/navigation.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<center>
-			<a class="wide" href="/"><img src="assets/inkbox-web.png" alt="InkBox Project logo" width=400 height=125></a>
+			<a class="wide" href="/"><img src="assets/quillos-web.png" alt="Quill OS logo" width=400 height=400></a>
 			<hr>
 			<p>
 				<a class="wide" href="/">Home</a>
