--- a/screenshots.html
+++ b/screenshots.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>InkBox Project - Screenshots</title>
+		<title>Quill OS - Screenshots</title>
 	</head>
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<h2>InkBox OS screenshots</h2>
+			<h2>Quill OS screenshots</h2>
 			<img src="assets/screenshots/reader-5.png" alt="Reader framework" width=600 height=800>
 			<p><b><i>Reader framework</i></b></p>
 			<img src="assets/screenshots/reader-8.png" alt="Reader framework: 'Go to page' function" width=600 height=800>
