--- a/donate.html
+++ b/donate.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>InkBox Project - Donate</title>
+		<title>Quill OS - Donate</title>
 	</head>
 	<body>
 		<script id="navbar" src="navbar.js"></script>
 		<center>
-			<p>We are currently only two developers actively working on the InkBox OS project: donations are very welcome.<br>If you want a particular device to get ported but don't have the skills to do it yourself, a donation can financially motivate us to buy it and try our best to port it.</p>
+			<p>I am currently the only one actively working on the Quill OS project: donations are very welcome.<br>If you want a particular device to get ported but don't have the skills to do it yourself, a donation can financially motivate me to buy it and try my best to port it.</p>
 			<p>
 				<b>Links:</b><br>
 				<a href="https://paypal.me/inkboxos/">PayPal</a>
